# Calculator-with-DLL

./: .gitignore  CMakeLists.txt  main.cpp
src/: Calculator.h  LoaderDLL.cpp  LoaderDLL.h
src/LoaderDLL/: LoaderDLL.cpp  LoaderDLL.h
src/operations/: Abs.cpp  Cos.cpp  E.cpp  Exp.cpp  LoaderDLL.h  Log.cpp  Max.cpp  Min.cpp  Operation.h  Pi.cpp  Pow.cpp  Sin.cpp  Sqrt.cpp  Tan.cpp
src/operations/binary/: Binary.h  Min.cpp  Pow.cpp
src/operations/unary/: Sin.cpp  Sqrt.cpp  Unary.h
src/parser/: Lexer.cpp  Parser.cpp  Parser.h
src/solver/: Lexer.cpp  Lexer.h  Solver.cpp  Solver.h
